apps/miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app: miniflux
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi

          readinessProbe:
            exec:
              command: ["/usr/bin/miniflux", "-healthcheck", "auto"]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3

          livenessProbe:
            exec:
              command: ["/usr/bin/miniflux", "-healthcheck", "auto"]
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 3
